# h2o-2026

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/analytics/: alerts.py  forecast.py  risk.py  stats.py
backend/app/data_sources/: cdec.py  csv_loader.py
backend/app/routers/: alerts.py  forecast.py  snapshot.py  timeseries.py
frontend/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AlertsList.tsx  ForecastStrip.tsx  MetricCard.tsx  RiskBadge.tsx  TrendChart.tsx
frontend/lib/: api.ts
